feat(internationalization): added internationalization

--- a/src/app/form-gt/form-gt-thank-you/form-gt-thank-you.component.html
+++ b/src/app/form-gt/form-gt-thank-you/form-gt-thank-you.component.html
@@ -13,12 +13,12 @@
 									<div class="col-md">
 										<div class="row justify-content-center">
 											<div class="col-md-12" id="header-resultado">
-												<h2>Obrigado por se increver!</h2>
+												<h2 i18n="@@thanksForSubscribleText">Obrigado por se increver!</h2>
 											</div>
 											<div class="col-md-12 grid-message mobile-message" id="grid-message">
 												<div class="col-md-10">
-													<h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
-													<p>
+													<h3 i18n="@@thanksForSubscribleMessage">Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
+													<p i18n="@@registerResult">
 														Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por oportunidades internacionais
 														em empresas na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
 													</p>
@@ -41,7 +41,7 @@
 										<label>
 											<i class="fas fa-home"></i> Home
 										</label>
-										<h2>
+										<h2 i18n="@@accessHomePage">
 											Acessar a página inicial
 										</h2>
 									</div>
@@ -50,9 +50,9 @@
 									<div class='photo-product go-to-portal'></div>
 									<div class='card-content'>
 										<label>
-											<i class="fas fa-briefcase"></i> Vagas
+											<i class="fas fa-briefcase"></i> <span i18n="@@vacancies">Vagas</span>
 										</label>
-										<h2>
+										<h2 i18n="@@accesOpportunitiesPortal">
 											Acessar o portal de oportunidades
 										</h2>
 									</div>
@@ -63,7 +63,7 @@
 										<label>
 											<i class="fab fa-blogger-b"></i> Blog
 										</label>
-										<h2>
+										<h2 i18n="@@learnMoreAboutOurStories">
 											Conheça mais nossas histórias
 										</h2>
 									</div>
