--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -10,15 +10,16 @@
       <div class="row">
         <div class="logo-product gt col-lg-5 col-sm-12 col-md-12"></div>
         <div class="description col-lg-7 col-sm-12 col-md-12">
-          <h2 class="bold">
+          <h2 class="bold" i18n="@@programOverview">
             Visão geral do programa
           </h2>
-          <p>
+          <p i18n="@@gtOverview">
             O Talento Global é uma experiência internacional em empresas durante 3 a 12 meses em que o jovem tem a chance de viver o
             ambiente profissional e corporativo. As grandes áreas de atuação do Talento Global são: Ensino de Idiomas, Tecnologia
             da Informação e áreas de Administração, como finanças, gestão, RH e marketing. Para o processo, é necessário
             alguns requisitos como: inglês avançado e experiência na área que quer atuar. Nessa experiência, o intercambista
             recebe uma bolsa-auxílio para cobrir os custos básicos durante o período de intercâmbio.
+          </p>
         </div>
       </div>
     </div>
@@ -39,10 +40,10 @@
               <div class="round circle icon with-border without-background gt lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@register">
                 Cadastre-se
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@registerAndSeeOpportunities">
                 Preencha seu cadastro e veja as oportunidades em nosso site.
               </p>
             </div>
@@ -52,10 +53,10 @@
               <div class="round circle icon with-border without-background gt lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@contactWithAiesec">
                 Contato com a AIESEC
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@contactWithAiesecText">
                 A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
               </p>
             </div>
@@ -65,10 +66,10 @@
               <div class="round circle icon with-border without-background gt lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@cvInEnglishTitle">
                 Fazer o CV em inglês
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@cvInEnglishText">
                 É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos
                 aqui para te ajudar!
               </p>
@@ -79,10 +80,10 @@
               <div class="round circle icon with-border without-background gt lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@applyInOurVacanciesTitle">
                 Aplique em nossas vagas
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@applyInOurVacanciesText">
                 No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
                 da AIESEC.
               </p>
@@ -93,10 +94,10 @@
               <div class="round circle icon with-border without-background gt lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@interviewsForVacanciesTitle">
                 Entrevistas para vagas que for selecionado
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@interviewsForVacanciesText">
                   Você vai passar por entrevistas ao longo do processo para algumas vagas para as quais você se candidatou.
               </p>
             </div>
@@ -106,10 +107,10 @@
               <div class="round circle icon with-border without-background gt lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@beApprovedOnTheJobTitle">
                 Ser aprovado na vaga
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@beApprovedOnTheJobGeText">
                 Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento
                 de uma taxa administrativa.
               </p>
@@ -120,10 +121,10 @@
               <div class="round circle icon with-border without-background gt lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@getReadyForYourExchangesTitle">
                 Se prepare para o seu Intercâmbio
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@getReadyForYourExchangesText">
                 Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
               </p>
             </div>
@@ -133,17 +134,17 @@
               <div class="round circle icon with-border without-background gt lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@livesExperienceTitle">
                 Viva a Experiência
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@livesExperienceText">
                 Agora é só viajar e, com auxílio da AIESEC, viver uma experiência de liderança!
               </p>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="with-background bold gt without-border centered">
+              <button [ngx-scroll-to]="'#form'" class="with-background bold gt without-border centered" i18n="@@subscribeNow">
                 Inscreva-se já
               </button>
             </div>
@@ -156,49 +157,49 @@
     <div class="container">
       <div class="row">
         <div class="faq-info col-lg-7 col-sm-12 col-md-12">
-          <h2 class='bold'>
+          <h2 class='bold' i18n="@@faqFrequentlyAskedQuestions">
             FAQ - Dúvidas Frequentes
           </h2>
           <div class="row">
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGtItem1">
                 Como será meu contato com a AIESEC durante o intercâmbio?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGtItem1Answer">
                 Ele será feito com frequência tanto pela AIESEC de destino quanto pela AIESEC de origem, combinado previamente por vocês.
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGtItem2">
                 Como é a questão do pagamento?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGtItem2Answer">
                 Você fará o processo todo sem custos, e só após ser aprovado em uma vaga que assinará o contrato com a AIESEC e pagará a
                 taxa.
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGtItem3">
                 Preciso de seguro saúde para viajar?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGtItem3Answer">
                 Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
                 recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
                 preferir.
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGtItem4">
                 Qual o perfil ideal para fazer um Talento Global?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGtItem4Answer">
                 Você não precisa ser estudante ou recém-formado para esse intercâmbio. O que é necessário é ter entre 18 e 30 anos, com inglês
                 avançado e experiência prévia em alguma dessas áreas: Ensino de Línguas, Marketing, Tecnologia da Informação,
                 Gestão.
               </p>
             </div>
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white gt">
+              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white gt" i18n="@@contactUsForm">
                 Fale conosco
               </button>
             </div>
@@ -222,10 +223,10 @@
               <div class="round circle icon without-background gt"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem1Title">
                 Auxílio para achar sua vaga
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem1Text">
                 Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
                 e vai te colocar em contato com o escritório para onde você vai viajar.
               </p>
@@ -236,10 +237,10 @@
               <div class="round circle icon without-background gt"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem2Title">
                 Apoio logístico
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem2Text">
                 Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
                 e preparo para o seu projeto.
               </p>
@@ -250,10 +251,10 @@
               <div class="round circle icon without-background gt"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem3Title">
                 Descrição de trabalho
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem3Text">
                 Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
                 e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
                 dúvida.
@@ -265,10 +266,10 @@
               <div class="round circle icon without-background gt"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem4Title">
                 Experiência de Liderança
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem4Text">
                 Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e aprimorar as habilidades
                 desenvolvidas no seu intercâmbio, para que você possa retornar e trazer um impacto real para sua cidade.
               </p>
@@ -278,7 +279,7 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default">
+          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default" i18n="@@talkWithOurRepresentatives">
             Fale com um dos nossos representantes
           </button>
         </div>
