--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -10,17 +10,17 @@
           <source srcset="../../assets/images/logo-voluntario-global.png" type="image/png"> 
           <img src="../../assets/images/logo-voluntario-global.png">
         </picture>
-        <p class="desktop">
+        <p class="desktop" i18n="@@landingGvAboutDesktop">
           Ser um voluntário global é transformar
           <br> seus valores em ação e fazer a diferença
           <br> em diversas regiões do mundo.
         </p>
-        <p class="mobile">
+        <p class="mobile" i18n="@@landingGvAboutMobile">
           Intercâmbio Voluntário em Fundações
         </p>
-        <button type="button" (click)="goToGv()" class="btn btn-outline-light desktop">SAIBA MAIS</button>
+        <button type="button" (click)="goToGv()" class="btn btn-outline-light desktop" i18n="@@learnMore" style="text-transform: uppercase;">SAIBA MAIS</button>
         <button type="button" class="button centered border border-white without-background color-white mobile" (click)="toggleGv()">
-          Saiba mais
+          <span i18n="@@learnMore">Saiba mais</span>
           <i *ngIf="!seeMoreGv" class="fas fa-angle-down"></i>
           <i *ngIf="seeMoreGv" class="fas fa-angle-up"></i>
         </button>
@@ -28,7 +28,7 @@
           <div class="row">
             <div class="col-3 mobile-1"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGvItem1">
                 Tenha uma experiência de voluntário em ONGs, Escolas ou Fundações de diversos países com duração de 6 a 8 semanas.
               </p>
             </div>
@@ -36,7 +36,7 @@
           <div class="row">
             <div class="col-3 mobile-2"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGvItem2">
                 Conheça projetos que são vinculados aos Objetivos de Desenvolvimento Sustentável das Nações Unidas.
               </p>
             </div>
@@ -44,12 +44,12 @@
           <div class="row">
             <div class="col-3 mobile-3"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGvItem3">
                 Ter entre 18 e 30 anos é o único requisito para deixar sua marca no mundo.
               </p>
             </div>
           </div>
-          <button class="button" (click)="goToGv()" class="background-white gv without-border">
+          <button class="button" (click)="goToGv()" class="background-white gv without-border"  i18n="@@signup">
             Inscreva-se
           </button>
         </div>
@@ -63,17 +63,17 @@
           <source srcset="../../assets/images/logo-empreendedor-global.png" type="image/png"> 
           <img src="../../assets/images/logo-empreendedor-global.png">
         </picture>        
-        <p class="desktop">
+        <p class="desktop" i18n="@@landingGeAboutDesktop">
           Assuma os desafios de trabalhar em uma
           <br> Startup e se desenvolva como um lider
           <br> empreendedor.
         </p>
-        <p class="mobile">
+        <p class="mobile" i18n="@@landingGeAboutMobile">
           Imersão em Startups
         </p>
-        <button type="button" (click)="goToGe()" class="btn btn-outline-light desktop">SAIBA MAIS</button>
+        <button type="button" (click)="goToGe()" class="btn btn-outline-light desktop" style="text-transform: uppercase;" i18n="@@learnMore">SAIBA MAIS</button>
         <button type="button" class="button centered border border-white without-background color-white mobile" (click)="toggleGe()">
-          Saiba mais
+          <span i18n="@@learnMore">Saiba mais</span>
           <i *ngIf="!seeMoreGe" class="fas fa-angle-down"></i>
           <i *ngIf="seeMoreGe" class="fas fa-angle-up"></i>
         </button>
@@ -81,7 +81,7 @@
           <div class="row">
             <div class="col-3 mobile-1"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGeItem1">
                 Ter uma experiência de imersão em uma startup durante 6 a 12 semanas
               </p>
             </div>
@@ -89,7 +89,7 @@
           <div class="row">
             <div class="col-3 mobile-4"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGeItem2">
                 Viva em um ambiente dinâmico de uma Startup e atue em Marketing, Administração, T.I. ou Design
               </p>
             </div>
@@ -97,12 +97,12 @@
           <div class="row">
             <div class="col-3 mobile-5"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGeItem3">
                 O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia profissional
               </p>
             </div>
           </div>
-          <button class="button" (click)="goToGe()" class="background-white ge without-border">
+          <button class="button" (click)="goToGe()" class="background-white ge without-border" i18n="@@signup">
             Inscreva-se
           </button>
         </div>
@@ -116,17 +116,17 @@
           <source srcset="../../assets/images/logo-talentos-globais.png" type="image/png"> 
           <img src="../../assets/images/logo-talentos-globais.png">
         </picture>        
-        <p class="desktop">
+        <p class="desktop" i18n="@@landingGtAboutDesktop">
           Agregue diferencial ao seu currículo
           <br> com essa experiência enriquecedora.
           <br>
         </p>
-        <p class="mobile">
+        <p class="mobile" i18n="@@landingGtAboutMobile">
           Estágio internacional em empresas
         </p>
-        <button type="button" (click)="goToGt()" class="btn btn-outline-light desktop">SAIBA MAIS</button>
+        <button type="button" (click)="goToGt()" class="btn btn-outline-light desktop" style="text-transform: uppercase;" i18n="@@learnMore">SAIBA MAIS</button>
         <button type="button" class="button centered border border-white without-background color-white mobile" (click)="toggleGt()">
-          Saiba mais
+          <span i18n="@@learnMore">Saiba mais</span>
           <i *ngIf="!seeMoreGt" class="fas fa-angle-down"></i>
           <i *ngIf="seeMoreGt" class="fas fa-angle-up"></i>
         </button>
@@ -134,7 +134,7 @@
           <div class="row">
             <div class="col-3 mobile-1"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGtItem1">
                 Ter uma experiência de estágio internacional em empresas durante 3 a 12 meses.
               </p>
             </div>
@@ -142,7 +142,7 @@
           <div class="row">
             <div class="col-3 mobile-6"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGtItem2">
                 Viva em um ambiente corporativo ensinando idiomas, trabalhando com TI, finanças, gestão, RH ou marketing.
               </p>
             </div>
@@ -150,12 +150,12 @@
           <div class="row">
             <div class="col-3 mobile-5"></div>
             <div class="col-9">
-              <p>
+              <p i18n="@@learnMoreGtItem3">
                 O jovem precisa ter o inglês avançado e experiência na área que quer atuar.
               </p>
             </div>
           </div>
-          <button class="button" (click)="goToGt()" class="background-white gt without-border">
+          <button class="button" (click)="goToGt()" class="background-white gt without-border" i18n="@@signup">
             Inscreva-se
           </button>
         </div>
@@ -165,16 +165,16 @@
 
   <section class="padding-top-and-bottom history-session" id="aiesec-info">
     <div class="container">
-      <h1> Desenvolvendo liderança jovem desde 1948 </h1>
+      <h1 i18n="@@landingHistoryTitle"> Desenvolvendo liderança jovem desde 1948 </h1>
       <br>
       <div class="row">
         <div class=" col-lg-5 col-sm-12 col-md-12 history-session-image">
           <div class="round icon circle"></div>
         </div>
         <div class=" col-lg-6 col-sm-12 col-md-12 history-session-content">
-          <h2 class="sub-title semibold italic">AIESEC é o maior movimento de liderança jovem do mundo</h2>
+          <h2 class="sub-title semibold italic" i18n="@@landingHistorySubtitle">AIESEC é o maior movimento de liderança jovem do mundo</h2>
           <hr>
-          <p class="lighter">
+          <p class="lighter" i18n="@@landingHistory">
             Acreditamos em liderança como a solução fundamental para os problemas do mundo e confiamos na juventude para liderar essa
             mudança. Através de intercâmbios, proporcionamos oportunidades para jovens explorarem seu potencial de liderança
             em ambientes desafiadores e multiculturais!
@@ -186,7 +186,7 @@
                 <source srcset="../../assets/images/icon-people.png" type="image/png" class="coin">
                 <img src="../../assets/images/icon-people.png" class="coin">
               </picture>
-              <p class="coin-text">
+              <p class="coin-text" i18n="@@historyMembersInBrazil">
                 <strong>2000</strong> membros
                 <br> no Brasil</p>
             </div>
@@ -196,7 +196,7 @@
                 <source srcset="../../assets/images/icon-world.png" type="image/png" class="coin"> 
                 <img src="../../assets/images/icon-world.png" class="coin">
               </picture>              
-              <p class="coin-text">Presente em
+              <p class="coin-text" i18n="@@historyPresentCountries">Presente em
                 <br>
                 <strong>+120 países</strong>
               </p>
@@ -207,7 +207,7 @@
                 <source srcset="../../assets/images/icon-books.png" type="image/png" class="coin">
                 <img src="../../assets/images/icon-books.png" class="coin">
               </picture>              
-              <p class="coin-text">+12.000 intercâmbios
+              <p class="coin-text" i18n="@@historyExchangesPerYear">+12.000 intercâmbios
                 <br> por ano</p>
             </div>
             <div class="col-sm align-center">
@@ -216,7 +216,7 @@
                 <source srcset="../../assets/images/icon-handshake.png" type="image/png" class="coin">
                 <img src="../../assets/images/icon-handshake.png" class="coin">
               </picture>
-              <p class="coin-text">+100 organizações
+              <p class="coin-text" i18n="@@historyPartnerOrganizationsInBrazil">+100 organizações
                 <br> parceiras no Brasil</p>
             </div>
           </div>
@@ -229,13 +229,13 @@
   <section class="row meet-our-programs-session">
     <div id="meet-our-programs-session-bg"></div>
     <div class="col-sm align-center meet-our-programs-content padding">
-      <p class="align-center margin">
+      <p class="align-center margin" i18n="@@landingAIESECModel">
         O modelo de desenvolvimento de liderança da
         <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles acreditam
         <br> e os torna capazes de fazer a
         <strong>diferença</strong> todos os dias.
       </p>
-      <button type="button" class="btn btn-light" (click)="scrollToGlobal()">Conheça nossos programas</button>
+      <button type="button" class="btn btn-light" (click)="scrollToGlobal()" i18n="@@getToKnowOurPrograms">Conheça nossos programas</button>
     </div>
   </section>
 
@@ -243,7 +243,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class="italic centered">
+          <h1 class="italic centered" i18n="@@aiesecExperienceTitle">
             Em uma experiência com a AIESEC você vai...
           </h1>
         </div>
@@ -252,25 +252,25 @@
           <ul>
             <li class="bullet-1 margin">
               <div class='bullet-icon icon-1'></div>
-              <span>
+              <span i18n="@@aiesecExperienceItem1">
                 Conhecer e viver seus valores pessoais, enquanto explora suas paixões e seus pontos fortes.
               </span>
             </li>
             <li class="bullet-2 margin">
               <div class='bullet-icon icon-2'></div>
-              <span>
+              <span i18n="@@aiesecExperienceItem2">
                 Provar sua habilidade de fazer uma diferença no mundo, se conectando com temas globais.
               </span>
             </li>
             <li class="bullet-3 margin">
               <div class='bullet-icon icon-3'></div>
-              <span>
+              <span i18n="@@aiesecExperienceItem3">
                 Desenvolver suas habilidades de comunicação em um ambiente diverso.
               </span>
             </li>
             <li class="bullet-4 margin">
               <div class='bullet-icon icon-4'></div>
-              <span>
+              <span i18n="@@aiesecExperienceItem4">
                 Tomar decisões para solucionar diversos problemas em ambientes desafiadores.
               </span>
             </li>
@@ -284,7 +284,7 @@
   <div id="our-stories">
     <div id="our-stories-bg"></div>
     <section class="container padding align-center our-stories">
-      <h1 class='italic centered'>As nossas histórias</h1>
+      <h1 class='italic centered' i18n="@@landingOurHistories">As nossas histórias</h1>
       <br>
       <div class="row content-swipe-area">
         <div class="col-sm swipe-area">
@@ -300,7 +300,7 @@
                   <div class="box-case-bg"></div>
                   <div class="box-case box-case-gv">
                     <div class="logo-product gv"></div>
-                    <p class='product-story-info'>
+                    <p class='product-story-info' i18n="@@landingOurHistory1">
                       "Meu Voluntário Global foi uma experiência muito desafiadora na qual pude me desenvolver muito e impactar o mundo ao meu
                       redor."
                     </p>
@@ -315,7 +315,7 @@
                   <div class="box-case-bg"></div>
                   <div class="box-case">
                     <div class="logo-product ge"></div>
-                    <p class='product-story-info'>
+                    <p class='product-story-info' i18n="@@landingOurHistory2">
                       "Meu intercâmbio no Egito definiu muito do que será minha carreira daqui pra frente. Além de aprender muito na Startup que
                       eu trabalhei, também participei de um ambiente de trabalho muito multicultural! Foi uma experiência
                       inesquecível."
@@ -331,7 +331,7 @@
                   <div class="box-case-bg"></div>
                   <div class="box-case">
                     <div class="logo-product gt"></div>
-                    <p class='product-story-info'>
+                    <p class='product-story-info' i18n="@@landingOurHistory3">
                       "Fazer meu intercâmbio na Índia foi com certeza a experiência que eu mais de desafiei e desenvolvi, tanto profissionalmente
                       quanto pessoalmente. Meu ano lá foi um divisor de águas na minha carreira e pra pessoa que sou hoje!"
                     </p>
