--- a/src/app/landing-page-ge/landing-page-ge.component.html
+++ b/src/app/landing-page-ge/landing-page-ge.component.html
@@ -10,10 +10,10 @@
       <div class="row">
         <div class="logo-product ge col-lg-5 col-sm-12 col-md-12"></div>
         <div class="description col-lg-7 col-sm-12 col-md-12">
-          <h2 class="bold">
+          <h2 class="bold" i18n="@@programOverview">
             Visão geral do programa
           </h2>
-          <p>
+          <p i18n="@@geOverview">
             O Empreendedor Global é uma experiência de imersão em Startup durante 6 a 12 semanas em que o jovem tem a chance de viver
             o ambiente dinâmico e inovador de uma Startup. As áreas de atuação são Marketing, Administração, T.I., Design
             e Desenvolvimento de Negócios! O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia
@@ -38,10 +38,10 @@
               <div class="round circle icon with-border without-background ge lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@register">
                 Cadastre-se
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@registerAndSeeOpportunities">
                 Preencha seu cadastro e veja as oportunidades em nosso site.
               </p>
             </div>
@@ -51,10 +51,10 @@
               <div class="round circle icon with-border without-background ge lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@contactWithAiesec">
                 Contato com a AIESEC
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@contactWithAiesecText">
                 A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
               </p>
             </div>
@@ -64,10 +64,10 @@
               <div class="round circle icon with-border without-background ge lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@cvInEnglishTitle">
                 Fazer o CV em inglês
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@cvInEnglishText">
                 É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos
                 aqui para te ajudar!
               </p>
@@ -78,10 +78,10 @@
               <div class="round circle icon with-border without-background ge lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@applyInOurVacanciesTitle">
                 Aplique em nossas vagas
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@applyInOurVacanciesText">
                 No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
                 da AIESEC.
               </p>
@@ -92,10 +92,10 @@
               <div class="round circle icon with-border without-background ge lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@interviewsForVacanciesTitle">
                 Entrevistas para vagas que for selecionado
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@interviewsForVacanciesText">
                 Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se apresentar, responder algumas perguntas
                 e tirar dúvidas.
               </p>
@@ -106,10 +106,10 @@
               <div class="round circle icon with-border without-background ge lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@beApprovedOnTheJobTitle">
                 Ser aprovado na vaga
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@beApprovedOnTheJobGeText">
                 Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento
                 de uma taxa administrativa.
               </p>
@@ -120,10 +120,10 @@
               <div class="round circle icon with-border without-background ge lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@getReadyForYourExchangesTitle">
                 Se prepare para o seu Intercâmbio
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@getReadyForYourExchangesText">
                 Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
               </p>
             </div>
@@ -133,17 +133,17 @@
               <div class="round circle icon with-border without-background ge lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@livesExperienceTitle">
                 Viva a Experiência
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@livesExperienceText">
                 Agora é só viajar e, com auxílio da AIESEC, viver uma experiência de liderança!
               </p>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="with-background bold ge without-border centered">
+              <button [ngx-scroll-to]="'#form'" class="with-background bold ge without-border centered" i18n="@@subscribeNow">
                 Inscreva-se já
               </button>
             </div>
@@ -156,47 +156,47 @@
     <div class="container">
       <div class="row">
         <div class="faq-info col-lg-7 col-sm-12 col-md-12">
-          <h2 class='bold'>
+          <h2 class='bold' i18n="@@faqFrequentlyAskedQuestions">
             FAQ - Dúvidas Frequentes
           </h2>
           <div class="row">
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGeItem1">
                 Vou receber salário para trabalhar na Startup?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGeItem1Answer">
                 Não, a experiência não é remunerada para este tipo de intercâmbio. Mas em compensação, você irá receber acomodação pelo período
                 do intercâmbio.
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGeItem2">
                 As vagas são apenas em Startups?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGeItem2Answer">
                 Não, existem vagas também em aceleradoras e incubadoras de negócios.
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGeItem3">
                 Preciso de seguro saúde para viajar?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGeItem3Answer">
                 Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
                 recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
                 preferir.
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGeItem4">
                 Qual o tipo de acomodação que irei ficar?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGeItem4Answer">
                 Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou apartamento com outros intercambistas!
               </p>
             </div>
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white ge">
+              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white ge" i18n="@@contactUsForm">
                 Fale conosco
               </button>
             </div>
@@ -220,10 +220,10 @@
               <div class="round circle icon without-background ge"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem1Title">
                 Auxílio para achar sua vaga
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem1Text">
                 Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
                 e vai te colocar em contato com o escritório para onde você vai viajar.
               </p>
@@ -234,10 +234,10 @@
               <div class="round circle icon without-background ge"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem2Title">
                 Apoio logístico
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem2Text">
                 Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
                 e preparo para o seu projeto.
               </p>
@@ -248,10 +248,10 @@
               <div class="round circle icon without-background ge"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem3Title">
                 Descrição de trabalho
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem3Text">
                 Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
                 e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
                 dúvida.
@@ -263,10 +263,10 @@
               <div class="round circle icon without-background ge"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem4Title">
                 Experiência de Liderança
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem4Text">
                 Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e aprimorar as habilidades
                 desenvolvidas no seu intercâmbio, para que você possa retornar e trazer um impacto real para sua cidade.
               </p>
@@ -276,7 +276,7 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default">
+          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default" i18n="@@talkWithOurRepresentatives">
             Fale com um dos nossos representantes
           </button>
         </div>
