--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -10,10 +10,10 @@
       <div class="row">
         <div class="logo-product gv col-lg-5 col-sm-12 col-md-12"></div>
         <div class="description col-lg-7 col-sm-12 col-md-12">
-          <h2 class="bold">
+          <h2 class="bold" i18n="@@programOverview">
             Visão geral do programa
           </h2>
-          <p>
+          <p i18n="@@gvOverview">
             O Voluntário Global é uma experiência voluntária em ONGs, Escolas ou Fundações em diversos países. Todos os projetos são
             vinculados aos Objetivos de Desenvolvimento Sustentável das Nações Unidas e possuem grande potencial de impacto
             no mundo. Os projetos tem duração de 6 a 8 semanas e ter entre 18 e 30 anos é o único requisito para deixar sua
@@ -37,10 +37,10 @@
               <div class="round circle icon with-border without-background gv lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@register">
                 Cadastre-se
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@registerAndSeeOpportunities">
                 Preencha seu cadastro e veja as oportunidades em nosso site.
               </p>
             </div>
@@ -50,10 +50,10 @@
               <div class="round circle icon with-border without-background gv lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@contactWithAiesec">
                 Contato com a AIESEC
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@contactWithAiesecText">
                 A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
               </p>
             </div>
@@ -63,10 +63,10 @@
               <div class="round circle icon with-border without-background gv lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@applyInOurVacanciesTitle">
                 Aplique em nossas vagas
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@applyInOurVacanciesText">
                 Você se candidata às vagas que te interessam.
               </p>
             </div>
@@ -76,10 +76,10 @@
               <div class="round circle icon with-border without-background gv lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@beApprovedOnTheJobTitle">
                 Ser aprovado na vaga
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@beApprovedOnTheJobGvText">
                 Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto, mediante o pagamento
                 de uma taxa administrativa.
               </p>
@@ -90,10 +90,10 @@
               <div class="round circle icon with-border without-background gv lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@getReadyForYourExchangesTitle">
                 Se prepare para o seu Intercâmbio
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@getReadyForYourExchangesText">
                 Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
               </p>
             </div>
@@ -103,17 +103,17 @@
               <div class="round circle icon with-border without-background gv lower"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@livesExperienceTitle">
                 Viva a Experiência
               </h3>
-              <p class="lighter">
+              <p class="lighter" i18n="@@livesExperienceText">
                 Agora é só viajar e, com auxílio da AIESEC, viver uma experiência de liderança!
               </p>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="with-background bold gv without-border centered">
+              <button [ngx-scroll-to]="'#form'" class="with-background bold gv without-border centered" i18n="@@subscribeNow">
                 Inscreva-se já
               </button>
             </div>
@@ -126,38 +126,38 @@
     <div class="container">
       <div class="row">
         <div class="faq-info col-lg-7 col-sm-12 col-md-12">
-          <h2 class='bold'>
+          <h2 class='bold' i18n="@@faqFrequentlyAskedQuestions">
             FAQ - Dúvidas Frequentes
           </h2>
           <div class="row">
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGvItem1">
                 Alguém vai me acompanhar durante o intercâmbio?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGvItem1Answer">
                 Sempre haverá uma pessoa da AIESEC em contato com você, tanto do país aonde você está quanto do Brasil.
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGvItem2">
                 Preciso de seguro saúde para viajar?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGvItem2Answer">
                 Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
                 recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
                 preferir.
               </p>
             </div>
             <div class="col-sm-12">
-              <h3 class='semibold'>
+              <h3 class='semibold' i18n="@@faqGvItem3">
                 Qual o tipo de acomodação que irei ficar?
               </h3>
-              <p class='lighter italic'>
+              <p class='lighter italic' i18n="@@faqGvItem3Answer">
                 Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou apartamento com outros intercambistas!
               </p>
             </div>
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white gv">
+              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white gv" i18n="@@contactUsForm">
                 Fale conosco
               </button>
             </div>
@@ -181,10 +181,10 @@
               <div class="round circle icon without-background gv"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem1Title">
                 Auxílio para achar sua vaga
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem1Text">
                 Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
                 e vai te colocar em contato com o escritório para onde você vai viajar.
               </p>
@@ -195,10 +195,10 @@
               <div class="round circle icon without-background gv"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem2Title">
                 Apoio logístico
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem2Text">
                 Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
                 e preparo para o seu projeto.
               </p>
@@ -209,10 +209,10 @@
               <div class="round circle icon without-background gv"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem3Title">
                 Descrição de trabalho
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem3Text">
                 Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
                 e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
                 dúvida.
@@ -224,10 +224,10 @@
               <div class="round circle icon without-background gv"></div>
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem4Title">
                 Experiência de Liderança
               </h3>
-              <p class="lighter lower">
+              <p class="lighter lower" i18n="@@programAboutItem4Text">
                 Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e aprimorar as habilidades
                 desenvolvidas no seu intercâmbio, para que você possa retornar e trazer um impacto real para sua cidade.
               </p>
@@ -237,7 +237,7 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default">
+          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default" i18n="@@talkWithOurRepresentatives" i18n="@@talkWithOurRepresentatives">
             Fale com um dos nossos representantes
           </button>
         </div>
